# fastapi-template

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  app.py  asgi.py  config.py  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
admin/: auth.py  main.py
api/: router.py
core/: db.py  exceptions.py  minio_config.py  models.py
migrations/: env.py
models/: __init__.py
